Update raw url and change command to wget

--- a/README.rdoc
+++ b/README.rdoc
@@ -10,7 +10,7 @@ First, you need to install this gem. You need to have Ruby 1.8.6 and Rubygems in
 
 Then, download the post-receive hook file to the hooks directory and make it executable
 
-  curl -o hooks/post-receive http://github.com/flowdock/flowdock-git-hook/raw/master/post-receive
+  wget -O hooks/post-receive https://raw.github.com/flowdock/flowdock-git-hook/master/post-receive
   chmod +x hooks/post-receive
 
 Configure your Flow API tokens to git configuration
